<resources>
    <string name="app_name">ExercicioEdi6</string>
    <string name="titulo">Cadastro de Clientes</string>
    <string name="instrucoes">Informa seu Login e Senha para continuar</string>
    <string name="login">Login:</string>
    <string name="senha">Senha:</string>
    <string name="acesso_app">Acesso ao App</string>
    <string name="nome">Nome:</string>
    <string name="endereco">Endereço:</string>
    <string name="numero">Número:</string>
    <string name="complemento">Complemento:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="matricula">Matrícula:</string>
    <string name="cidade">Cidade:</string>
    <string name="visualizar">Visualizar</string>
</resources>