<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarCliente"
    android:orientation="vertical"
    android:padding="16sp"
    android:scrollbarSize="15sp"
    android:background="@drawable/wpp4">
  <LinearLayout
      android:padding="@dimen/info"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@color/white">


    <TextView
        android:fontFamily="sans-serif-condensed-light"
        android:layout_gravity="center"
        android:id="@+id/txtRepeticao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtext"/>

    <TextView

        android:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:id="@+id/titulo_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/titulo_size" />
    <pl.droidsonroids.gif.GifImageView
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/tumblr_mbp45chm1p1rfjowdo1_500"
        />



    <TextView
      android:fontFamily="sans-serif-condensed-light"
      android:layout_marginTop="@dimen/margin_pad2"
      android:text="@string/nome"
      android:id="@+id/nome"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/info"/>

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <TextView
        android:layout_marginTop="@dimen/margin_pad2"
        android:id="@+id/matricula"
        android:layout_width="@dimen/edittext"        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/matricula"
        android:textSize="@dimen/info" />

    <EditText
        android:inputType="number"

        android:id="@+id/txtMatricula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="@dimen/margin_pad2"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/endereco"
        android:id="@+id/endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/info"/>
    <EditText

        android:id="@+id/txtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="@dimen/margin_pad2"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/numero"
        android:id="@+id/numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/info"/>
    <EditText
        android:inputType="number"
        android:id="@+id/txtNumero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="@dimen/margin_pad2"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/complemento"
        android:id="@+id/complemento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/info"/>
    <EditText

        android:id="@+id/txtComplemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="@dimen/margin_pad2"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/cidade"
        android:id="@+id/cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/info"/>
    <EditText

        android:id="@+id/txtCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_gravity="center"
        android:text="@string/cadastrar"
        android:id="@+id/cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="salvar"/>
  </LinearLayout>
  </ScrollView>